# RobloxAndroidMidi

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/edllt/robloxmidi/: IAIDLIPCService.aidl  ITestService.aidl
app/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
app/src/main/cpp/jni/src/: HTTPServer.cpp  TouchInput.cpp
app/src/main/cpp/old/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/edllt/robloxmidi/: AIDLService.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
